# wolfproxy

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  copyfiles  default  install.sh  install_service.sh  release.sh  run.sh  setup.sh  wolfproxy.toml  wolfproxy.toml.example
.codewolf/: conversation_codewolf.json
.github/workflows/: release.yml
sites-enabled/: default
src/: firewall.rs  main.rs  monitoring.rs  nginx.rs  upstream.rs
