[package]
name = "wolfproxy"
version = "0.4.0"
edition = "2021"
description = "A Rust-based nginx proxy replacement that reads nginx configuration files"
authors = ["Wolf Software Systems Ltd"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "http1", "http2"] }
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Tower middleware
tower = { version = "0.4", features = ["util", "timeout", "retry", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-gzip", "decompression-gzip"] }

# HTTP client for proxying
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full", "client-legacy"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
base64 = "0.22"

# TLS/SSL
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

# Utilities
bytes = "1"
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2"
futures-util = "0.3"
regex = "1"
url = "2"
rand = "0.8"
dashmap = "6"
arc-swap = "1"
notify = "6"
fnv = "1"
glob = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "wolfproxy"
path = "src/main.rs"
